--- a/Test/Datastreamr.Framework.Test/Datastreamr.Framework.Test.vbproj
+++ b/Test/Datastreamr.Framework.Test/Datastreamr.Framework.Test.vbproj
@@ -43,6 +43,9 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LazyFramework">
+      <HintPath>..\..\lib\LazyFramework.dll</HintPath>
+    </Reference>
     <Reference Include="NSubstitute">
       <HintPath>..\..\packages\NSubstitute.1.4.3.0\lib\NET40\NSubstitute.dll</HintPath>
     </Reference>
@@ -51,6 +54,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -93,6 +97,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -108,6 +113,10 @@
     <ProjectReference Include="..\..\Framework\Datastreamr.Framework\Datastreamr.Framework.vbproj">
       <Project>{c3071178-6787-430f-9980-26ad5178715d}</Project>
       <Name>Datastreamr.Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Providers\Infotjenester\Infotjenester.Hressurs.Provider\Infotjenester.Hressurs.Provider.vbproj">
+      <Project>{E45F2BD7-20B8-4A1C-B5B6-7C4D33091F88}</Project>
+      <Name>Infotjenester.Hressurs.Provider</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
