--- a/Test/RavenDB.Test/packages.config
+++ b/Test/RavenDB.Test/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages>
+<packages xmlns="urn:packages">
   <package id="NSubstitute" version="1.4.3.0" targetFramework="net40" />
   <package id="NUnit" version="2.6.2" targetFramework="net40" />
   <package id="RavenDB.Client" version="2.0.2230" targetFramework="net40" />
