--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Framework\Datastreamr.Framework\packages.config" />
+  <repository path="..\FTP\Datastreamr.FtpHomeDirectoryProvider.Test\packages.config" />
   <repository path="..\Test\Datastreamr.Framework.Test\packages.config" />
   <repository path="..\Test\Providers\Infotjenester.Hressurs.Provider.Test\packages.config" />
   <repository path="..\Test\RavenDB.Test\packages.config" />
