--- a/Test/Datastreamr.Framework.Test/Datastreamr.Framework.Test.vbproj
+++ b/Test/Datastreamr.Framework.Test/Datastreamr.Framework.Test.vbproj
@@ -71,7 +71,7 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomerStreamTest.vb" />
+    <Compile Include="DatastreamrContext.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
