--- a/Test/Datastreamr.Framework.Test/Datastreamr.Framework.Test.vbproj
+++ b/Test/Datastreamr.Framework.Test/Datastreamr.Framework.Test.vbproj
@@ -71,7 +71,8 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DatastreamrContext.vb" />
+    <Compile Include="DatastreamrContextTest.vb" />
+    <Compile Include="FileStreamTest.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -118,6 +119,15 @@
       <Project>{E45F2BD7-20B8-4A1C-B5B6-7C4D33091F88}</Project>
       <Name>Infotjenester.Hressurs.Provider</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\FixedPosition.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Semicolon_Header.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Semicolon_NoHeader.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
