--- a/Framework/Datastreamr.Framework/packages.config
+++ b/Framework/Datastreamr.Framework/packages.config
@@ -1,12 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <packages xmlns="urn:packages">
-  <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net40" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
-  <package id="RavenDB.Client" version="2.0.2230" targetFramework="net40" />
-  <package id="RavenDB.Database" version="2.0.2230" targetFramework="net40" />
-  <package id="RavenDB.Embedded" version="2.0.2230" targetFramework="net40" />
+  <package id="Noesis.Javascript" version="0.7.1.0" targetFramework="net40" xmlns="" />
 </packages>
