--- a/Providers/Infotjenester/Infotjenester.Hressurs.Provider/Infotjenester.Hressurs.Provider.vbproj
+++ b/Providers/Infotjenester/Infotjenester.Hressurs.Provider/Infotjenester.Hressurs.Provider.vbproj
@@ -43,6 +43,10 @@
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LazyFramework, Version=2010.4.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\LazyFramework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization" />
