--- a/Test/Providers/Infotjenester.Hressurs.Provider.Test/Infotjenester.Hressurs.Provider.Test.vbproj
+++ b/Test/Providers/Infotjenester.Hressurs.Provider.Test/Infotjenester.Hressurs.Provider.Test.vbproj
@@ -47,6 +47,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\lib\LazyFramework.dll</HintPath>
     </Reference>
+    <Reference Include="NSubstitute">
+      <HintPath>..\..\..\packages\NSubstitute.1.5.0.0\lib\NET40\NSubstitute.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\..\..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
