--- a/Providers/Infotjenester/Infotjenester.Hressurs.Provider/Infotjenester.Hressurs.Provider.vbproj
+++ b/Providers/Infotjenester/Infotjenester.Hressurs.Provider/Infotjenester.Hressurs.Provider.vbproj
@@ -67,9 +67,9 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Endpoints\HRPerson.vb" />
     <Compile Include="Endpoints\HRPersonEndpoint.vb" />
     <Compile Include="Endpoints\HRPersonParams.vb" />
+    <Compile Include="HRPerson.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
