--- a/Test/Providers/Infotjenester.Hressurs.Provider.Test/packages.config
+++ b/Test/Providers/Infotjenester.Hressurs.Provider.Test/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages xmlns="urn:packages">
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" xmlns="" />
   <package id="NSubstitute" version="1.5.0.0" targetFramework="net40" xmlns="" />
 </packages>
