Added interface for to avoid service calls.
Also removed som properties on Job entity, as they where not needed

--- a/Providers/Infotjenester/Infotjenester.Hressurs.Provider/Infotjenester.Hressurs.Provider.vbproj
+++ b/Providers/Infotjenester/Infotjenester.Hressurs.Provider/Infotjenester.Hressurs.Provider.vbproj
@@ -67,8 +67,11 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Endpoints\BaseEndpoint.vb" />
     <Compile Include="Endpoints\HRPersonEndpoint.vb" />
     <Compile Include="Endpoints\HRPersonParams.vb" />
+    <Compile Include="Endpoints\PersonClientProxy.vb" />
+    <Compile Include="Endpoints\TypeSafeEndPoint.vb" />
     <Compile Include="HRPerson.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
