--- a/Framework/Datastreamr.Framework/Datastreamr.Framework.vbproj
+++ b/Framework/Datastreamr.Framework/Datastreamr.Framework.vbproj
@@ -102,23 +102,26 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseClasses\DatastreamrBaseAggregate.vb" />
-    <Compile Include="BaseEndpointParams.vb" />
+    <Compile Include="Endpoints\BaseEndpointParams.vb" />
+    <Compile Include="DataContainer.vb" />
     <Compile Include="DatastreamrContext.vb" />
     <Compile Include="EndPointResult.vb" />
+    <Compile Include="Endpoints\BaseEndpoint.vb" />
+    <Compile Include="Endpoints\FtpFileStreamEndpoint.vb" />
+    <Compile Include="Endpoints\TypeSafeEndPoint.vb" />
     <Compile Include="Entities\IJobEntityDataAcces.vb" />
     <Compile Include="Entities\JobAggregate.vb" />
     <Compile Include="Entities\JobEntityDataAcces.vb" />
     <Compile Include="Facade\JobFacade.vb" />
-    <Compile Include="Interfaces\DataContainer.vb" />
     <Compile Include="Interfaces\IEndpoint.vb" />
     <Compile Include="Interfaces\IHasId.vb" />
     <Compile Include="Interfaces\IDatastream.vb" />
-    <Compile Include="Datastream.vb" />
-    <Compile Include="InternalDatastreamFacade.vb" />
-    <Compile Include="InternalStreams\BaseDataStream.vb" />
-    <Compile Include="InternalStreams\FileStream.vb" />
+    <Compile Include="DataStreams\BaseDataStream.vb" />
+    <Compile Include="DataStreams\FileStream.vb" />
     <Compile Include="Entities\JobEntity.vb" />
     <Compile Include="JobExecutor.vb" />
+    <Compile Include="JobResult.vb" />
+    <Compile Include="MapConfig.vb" />
     <Compile Include="MapInfo.vb" />
     <Compile Include="Mapper.vb" />
     <Compile Include="ParamInfo.vb" />
@@ -138,7 +141,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="PropertyDesc.vb" />
     <Compile Include="ProvidersFacade.vb" />
     <Compile Include="StreamParams.vb" />
     <Compile Include="User.vb" />
