--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,6 +3,7 @@
   <repository path="..\DataStreamr.Persistence\packages.config" />
   <repository path="..\Framework\Datastreamr.Framework\packages.config" />
   <repository path="..\FTP\Datastreamr.FtpHomeDirectoryProvider.Test\packages.config" />
+  <repository path="..\Providers\Infotjenester\Infotjenester.Hressurs.Provider\packages.config" />
   <repository path="..\Test\Datastreamr.Framework.Test\packages.config" />
   <repository path="..\Test\Datastreamr.Persistence.Test\packages.config" />
   <repository path="..\Test\Integration.Test\packages.config" />
