--- a/Framework/Datastreamr.Framework/packages.config
+++ b/Framework/Datastreamr.Framework/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
-<packages xmlns="urn:packages">
-  <package id="Noesis.Javascript" version="0.7.1.0" targetFramework="net40" xmlns="" />
+<packages>
+  <package id="Noesis.Javascript" version="0.7.1.0" targetFramework="net40" />
 </packages>
