--- a/Test/Integration.Test/app.config
+++ b/Test/Integration.Test/app.config
@@ -3,4 +3,29 @@
   <appSettings>
     <add key="FilePersisterPath" value="c:\temp\persist\"/>
   </appSettings>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IPerson">
+                    <security mode="TransportWithMessageCredential" />
+                </binding>
+            </basicHttpBinding>
+            <wsHttpBinding>
+                <binding name="WSHttpBinding_IPerson">
+                    <security mode="TransportWithMessageCredential">
+                        <transport clientCredentialType="None" />
+                        <message clientCredentialType="UserName" />
+                    </security>
+                </binding>
+            </wsHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="https://services.hressurs.no/PersonService.svc/basic"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPerson"
+                contract="PersonServiceReference.IPerson" name="BasicHttpBinding_IPerson" />
+            <endpoint address="https://services.hressurs.no/PersonService.svc/ws"
+                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IPerson"
+                contract="PersonServiceReference.IPerson" name="WSHttpBinding_IPerson" />
+        </client>
+    </system.serviceModel>
 </configuration>
