--- a/FTP/FileWatcherService/app.config
+++ b/FTP/FileWatcherService/app.config
@@ -3,6 +3,7 @@
   <appSettings>
     <add key="FilePersisterPath" value="C:\Middleware\JobDefinitions\"/>
     <add key="FileWatcherRootPath" value="C:\CustomerFtpFiles\"/>
+    <add key="CreditCardRootPath" value="C:\CreditCard\"/>
   </appSettings>
   <system.serviceModel>
     <bindings>
