--- a/Providers/Infotjenester/Infotjenester.Hressurs.Provider/Infotjenester.Hressurs.Provider.vbproj
+++ b/Providers/Infotjenester/Infotjenester.Hressurs.Provider/Infotjenester.Hressurs.Provider.vbproj
@@ -71,10 +71,12 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Endpoints\HRChildEndpoint.vb" />
     <Compile Include="Endpoints\HRPersonEndpoint.vb" />
     <Compile Include="Endpoints\HRPersonParams.vb" />
     <Compile Include="Endpoints\PersonClientProxy.vb" />
-    <Compile Include="HRPerson.vb" />
+    <Compile Include="MapObjects\HRChild.vb" />
+    <Compile Include="MapObjects\HRPerson.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -177,6 +179,9 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Service References\PersonServiceReference\meta24.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\PersonServiceReference\meta25.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Service References\PersonServiceReference\meta3.xsd">
