--- a/FTP/FileWatcherService/app.config
+++ b/FTP/FileWatcherService/app.config
@@ -1,9 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="FilePersisterPath" value="C:\Middleware\JobDefinitions\"/>
-    <add key="FileWatcherRootPath" value="C:\CustomerFtpFiles\"/>
-    <add key="CreditCardRootPath" value="C:\CreditCard\"/>
+    <add key="FilePersisterPath" value="C:\Middleware\JobDefinitions\" />
+    <add key="FileWatcherRootPath" value="C:\CustomerFtpFiles\" />
+    <add key="CreditCardRootPath" value="C:\CreditCard\" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.serviceModel>
     <bindings>
@@ -22,12 +23,20 @@
       </wsHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://services.hressurs.no/PersonService.svc/basic"
-          binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPerson"
-          contract="PersonServiceReference.IPerson" name="BasicHttpBinding_IPerson" />
-      <endpoint address="https://services.hressurs.no/PersonService.svc/ws"
-          binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IPerson"
-          contract="PersonServiceReference.IPerson" name="WSHttpBinding_IPerson" />
+      <endpoint address="https://services.hressurs.no/PersonService.svc/basic" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPerson" contract="PersonServiceReference.IPerson" name="BasicHttpBinding_IPerson" />
+      <endpoint address="https://services.hressurs.no/PersonService.svc/ws" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IPerson" contract="PersonServiceReference.IPerson" name="WSHttpBinding_IPerson" />
     </client>
   </system.serviceModel>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
