splits webservice calls into chunks

--- a/FTP/FileWatcherService/app.config
+++ b/FTP/FileWatcherService/app.config
@@ -9,7 +9,7 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IPerson">
+        <binding name="BasicHttpBinding_IPerson" sendTimeout="00:05:00">
           <security mode="TransportWithMessageCredential" />
         </binding>
       </basicHttpBinding>
