--- a/Test/Providers/Infotjenester.Hressurs.Provider.Test/Infotjenester.Hressurs.Provider.Test.vbproj
+++ b/Test/Providers/Infotjenester.Hressurs.Provider.Test/Infotjenester.Hressurs.Provider.Test.vbproj
@@ -82,6 +82,7 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HREmploymentEndPointTest.vb" />
     <Compile Include="HRChildEndPointTest.vb" />
     <Compile Include="HRPersonEndPointTest.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
